k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: antimule
  labels:
    app.kubernetes.io/name: antimule
    app.kubernetes.io/part-of: realtime-anti-mule-solution
