k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: antimule-ingress
  namespace: antimule
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: dashboard
                port:
                  number: 80
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-server
                port:
                  number: 8000
          - path: /socket.io/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-server
                port:
                  number: 8000
